Fixed a bug where IE would cut off the part of a photo if it expanded beyond the document height.

--- a/colorbox/colorbox.css
+++ b/colorbox/colorbox.css
@@ -1,5 +1,6 @@
 #modalContent, #borderTopLeft, #borderTopCenter, #borderTopRight, #borderBottomLeft, #borderBottomCenter, #borderBottomRight, #borderMiddleLeft, #borderMiddleRight {position:absolute;}
 #colorbox, #modalBackgroundOverlay{position:absolute; top:0; left:0; z-index:9999; width:100%; height:100%;}
+#colorbox{overflow:auto;}
 #modalBackgroundOverlay{position:fixed;}
 #modalClose, #contentPrevious, #contentNext{outline:none; cursor:pointer;}
 #modalLoadedContent iframe{display:block; width:100%; height:100%; border:0;}
